--- a/apps/playarr-api/package.json
+++ b/apps/playarr-api/package.json
@@ -15,13 +15,18 @@
     "@nestjs/axios": "4.0.0",
     "@nestjs/jwt": "11.0.0",
     "@nestjs/passport": "11.0.5",
+    "@nestjs/config": "4.0.2",
     "passport-jwt": "4.0.1",
     "bcrypt": "6.0.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2",
     "rss-parser": "3.13.0",
     "socket.io": "4.8.1",
-    "prisma": "6.7.0"
+    "prisma": "6.7.0",
+    "@nestjs/swagger": "11.2.0",
+    "@nestjs-modules/mailer": "1.11.2",
+    "@sentry/node": "7.114.0",
+    "@sentry/tracing": "7.114.0"
   },
   "devDependencies": {
     "@nestjs/cli": "11.0.7",
@@ -30,6 +35,9 @@
     "@typescript-eslint/parser": "8.32.1",
     "eslint": "9.26.0",
     "prettier": "3.5.3",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "@types/express": "4.17.21",
+    "@types/passport-jwt": "3.0.6",
+    "@types/bcrypt": "5.0.0"
   }
 }
