--- a/apps/playarr-api/tsconfig.json
+++ b/apps/playarr-api/tsconfig.json
@@ -2,10 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "rootDir": "src",
+    "rootDir": "../..",
     "module": "commonjs",
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../../libs/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
