--- a/apps/playarr-api/package.json
+++ b/apps/playarr-api/package.json
@@ -17,6 +17,7 @@
     "@nestjs/passport": "11.0.5",
     "@nestjs/config": "4.0.2",
     "passport-jwt": "4.0.1",
+    "passport": "0.7.0",
     "bcrypt": "6.0.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2",
