--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@nestjs/core": "11.1.1",
     "@nestjs/platform-express": "11.1.1",
     "@prisma/client": "6.7.0",
-    "rxjs": "7.8.2"
+    "rxjs": "7.8.2",
+    "class-validator": "0.14.0",
+    "class-transformer": "0.5.1"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
